--- a/src/pages/users/Users.module.css
+++ b/src/pages/users/Users.module.css
@@ -37,11 +37,12 @@
 }
 
 .user__pfp {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
+  object-fit: cover;
+  width: 90px;
+  height: 90px;
 }
 
 .user__uname {
   text-align: center;
+  word-wrap: break-word;
 }
